[package]
edition = "2018"
name = "nalgebra"
version = "0.19.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
exclude = ["/ci/*", "/.travis.yml", "/Makefile"]
description = "Linear algebra library with transformations and statically-sized or dynamically-sized matrices."
homepage = "https://nalgebra.org"
documentation = "https://nalgebra.org/rustdoc/nalgebra/index.html"
readme = "README.md"
keywords = ["linear", "algebra", "matrix", "vector", "math"]
categories = ["science"]
license = "BSD-3-Clause"
repository = "https://github.com/rustsim/nalgebra"
[profile.bench]
lto = true

[lib]
name = "nalgebra"
path = "src/lib.rs"

[dependencies.alga]
version = "0.9"
default-features = false
features = ["std"]

[dependencies.generic-array]
version = "0.13"

[dependencies.num-complex]
version = "0.2"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.typenum]
version = "1.11"
